# whitespace

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  tsconfig.json
app/: __init__.py  config.py  extensions.py  langdetect.py  models.py  utils.py
app/routes/: admin.py  main.py
app/static/css/: custom.css
app/static/js/: main.js
app/static/ts/: main.ts
app/templates/: base.html  index.html  maintenance.html  new_paste.html  password.html  redirect_paste.html  search.html  view_paste.html
app/templates/admin/: about.html  base.html  dashboard.html  ips.html  login.html  pastes.html  settings.html
app/templates/errors/: 403.html  404.html  410.html  429.html  500.html
docs/: deploy-docker.md  deploy-standalone.md
migrations/versions/: 273bba5a4815_add_expires_at_to_banned_ips.py  51edd1deecd3_initial.py
tests/: conftest.py  test_admin.py  test_csrf.py  test_models.py  test_routes.py
