[project]
name = "whitespace"
version = "1.0.1"
description = "A self-hosted pastebin built with Flask. Supports syntax highlighting, file attachments, password-protected pastes, expiry options, and an admin panel."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.0.0",
    "flask-limiter>=3.5.0",
    "flask-login>=0.6.3",
    "flask-migrate>=4.0.0",
    "flask-sqlalchemy>=3.1.0",
    "flask-wtf>=1.3.0",
    "gunicorn>=21.0.0",
    "pygments>=2.20.0",
    "python-dotenv>=1.0.0",
    "cryptography>=46.0.7",
    "werkzeug>=3.1.8",
    "wtforms>=3.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
